<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_steps">Recipe Steps</string>
    <string name="instructions">- instructions...</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>
    <string name="instructions_title">Instructions</string>
    <string name="measure">Measure:</string>
    <string name="quantity">Quantity:</string>
    <string name="no_video_available">No Video Available</string>
    <string name="appwidget_text">Ingredients list</string>
    <string name="add_widget">Add widget</string>
    <string name="chose_recipe_to_show_ingredients">Chose recipe to show ingredients</string>
    <string name="done">Done</string>
</resources>
