<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exo_video_step"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/iv_no_video"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_do_not_disturb_alt_red_24dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/exo_video_step"
                app:layout_constraintEnd_toEndOf="@id/exo_video_step"
                app:layout_constraintStart_toStartOf="@id/exo_video_step"
                app:layout_constraintTop_toTopOf="@id/exo_video_step" />

            <TextView
                android:id="@+id/tv_no_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_video_available"
                app:layout_constraintEnd_toEndOf="@+id/iv_no_video"
                app:layout_constraintStart_toStartOf="@+id/iv_no_video"
                app:layout_constraintTop_toBottomOf="@id/iv_no_video" />
        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb_step"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/instructions_title"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_instructions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/instructions"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/previous_step"/>

            <Button
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/next_step"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>


